<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="horizontal">


    <TextView
        android:id="@+id/list_idTV"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/id"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/list_authorTV"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:gravity="center"
        android:text="@string/author"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/list_bookNameTV"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="4"
        android:gravity="center"
        android:text="@string/bookname"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/list_pagesTV"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/pages"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/list_priceTV"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:gravity="center"
        android:text="@string/price"
        android:textSize="20sp" />

</LinearLayout>


