<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@mipmap/bg2"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/care"
            android:textColor="#FFFFFF"
            android:textSize="40sp" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow android:paddingTop="20sp">

                <TextView
                    android:text="@string/id_mh"
                    android:textColor="#ffffff"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/showIdTv"
                    android:textColor="#ffffff"
                    android:textSize="20sp"
                    android:layout_width="0dp"
                    android:layout_weight="1"/>
            </TableRow>

            <TableRow android:paddingTop="20sp">

                <TextView
                    android:text="@string/modAuthor_mh"
                    android:textColor="#ffffff"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/showAuthorTv"
                    android:textColor="#ffffff"
                    android:textSize="20sp"
                    android:layout_width="0dp"
                    android:layout_weight="1"/>
            </TableRow>

            <TableRow
                android:paddingTop="20sp"
                android:paddingBottom="00sp">

                <TextView
                    android:text="@string/bookName_mh"
                    android:textColor="#ffffff"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/showBookNameTv"
                    android:textColor="#ffffff"
                    android:textSize="20sp"
                    android:layout_width="0dp"
                    android:layout_weight="1"/>
            </TableRow>

            <TableRow android:paddingTop="20sp">

                <TextView
                    android:text="@string/pages_mh"
                    android:textColor="#ffffff"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/showPagesTv"
                    android:textColor="#ffffff"
                    android:textSize="20sp"
                    android:layout_width="0dp"
                    android:layout_weight="1"/>
            </TableRow>
            <TableRow android:paddingTop="20sp">

                <TextView
                    android:text="@string/price_mh"
                    android:textColor="#ffffff"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/showPriceTv"
                    android:textColor="#ffffff"
                    android:textSize="20sp"
                    android:layout_width="0dp"
                    android:layout_weight="1"/>
            </TableRow>
        </TableLayout>

    </LinearLayout>

</ScrollView>