<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@mipmap/bg2"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/add"
            android:textColor="#FFFFFF"
            android:textSize="40sp" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">



            <TableRow android:paddingTop="20sp">

                <TextView
                    android:text="@string/modAuthor_mh"
                    android:textColor="#ffffff"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/modAuthorEt"
                    android:layout_weight="1"
                    android:textColor="#ffffff"
                    android:textSize="20sp" />
            </TableRow>

            <TableRow
                android:paddingTop="20sp"
                android:paddingBottom="20sp">

                <TextView
                    android:text="@string/bookName_mh"
                    android:textColor="#ffffff"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/modBookNameEt"
                    android:layout_weight="1"
                    android:textColor="#ffffff"
                    android:textSize="20sp" />
            </TableRow>

            <TableRow android:paddingTop="20sp">

                <TextView
                    android:text="@string/pages_mh"
                    android:textColor="#ffffff"
                    android:textSize="20sp" />

                <EditText
                    android:numeric="integer"
                    android:inputType="number"
                    android:id="@+id/modPagesEt"
                    android:layout_weight="1"
                    android:textColor="#ffffff"
                    android:textSize="20sp" />
            </TableRow>
            <TableRow android:paddingTop="20sp">

                <TextView
                    android:text="@string/price_mh"
                    android:textColor="#ffffff"
                    android:textSize="20sp" />

                <EditText
                    android:inputType="numberDecimal"
                    android:id="@+id/modPriceEt"
                    android:layout_weight="1"
                    android:textColor="#ffffff"
                    android:textSize="20sp" />
            </TableRow>
        </TableLayout>

    </LinearLayout>
</ScrollView>